--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,20 @@ h1, h2 {
     color: inherit;
 }
 
+/* hero image */
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../css/images/hero-image-love-running1.webp') no-repeat center center;
+}
+
+
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
 }
