--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,22 @@ h1, h2 {
     height: 600px;
     width: 100%;
     background: url('../css/images/hero-image-love-running1.webp') no-repeat center center;
+
+    /* animates zoom effect on loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
 }
 
+/* creates the level of zoom for hero image*/
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
 
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
