--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,13 +46,28 @@ h1, h2 {
     color: inherit;
 }
 
-/* hero image */
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+/* hero image and cover text*/
 
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative;
 }
+
+#cover-text, #cover-text h2 {
+    color: #fff;
+}
+
 #hero-image {
     height: 600px;
     width: 100%;
@@ -74,11 +89,22 @@ h1, h2 {
     }
 }
 
-#menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-}
+#cover-text {
+    font-size: 130%;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
 
-.active {
-    border-bottom: 1px solid #3a3a3a;
-}
+    width: 300px;
+    height: 200px;
 
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
+}
