--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,9 @@ h1, h2 {
 
 #center-about {
     width: 33%;
-    float: 0 auto;
+    margin: 0 auto;
 }
+
 hr {
     border-top: 1px solid #3a3a3a;
     width: 100%;
@@ -159,4 +160,27 @@ hr {
 
 .right-about-heading p {
     text-align: right;
+}
+
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url('../css/images/ethos-center-image.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
